<resources>
    <string name="Rs">\u20B9</string>
    <string name="app_name">ShopWala</string>
    <string name="continue_button">Continue</string>
    <string name="yourWhatsappNumber">Your WhatsApp Number</string>
    <string name="madeInIndia">100% Made in India</string>
    <string name="onboardSignupButton">Next</string>
    <string name="enterOtp">Enter OTP</string>
    <string name="otpSignupButton">Sign Up</string>
    <string name="enterOtoDescription">Enter 6-digit code sent to your phone</string>
    <string name="onBoardOneTitle">Discover</string>
    <string name="onBoardOneDescription">Explore your local markets and products at your fingertips.</string>
    <string name="onBoardTwoTitle">Sell Online</string>
    <string name="onBoardTwoDescription">Sell your products online on WhatsApp and anywhere on social media. </string>
    <string name="onBoardThreeTitle">Local Delivery</string>
    <string name="onBoardThreeDescription">Deliver your products locally and get your feedback by the customers.</string>
    <string name="provide_otp">Please provide 6 digit OTP sent to your phone.</string>
    <string name="signupStarterTextOne">Online Shop</string>
    <string name="signupStarterTextTwo">Successfully Created</string>
    <string name="signupStarterStartSellingButton">Start Selling</string>
    <string name="homeShareHeaderTitle">Share link on WhatsApp</string>
    <string name="homeShareHeaderDescription">Your customers can visit your online store and place orders from this link.</string>
    <string name="homeShareHeaderLink">shopwala.online/shopname_ntcgs</string>
    <string name="whatsappNotInstalled">Please install WhatsApp to continue. </string>
    <string name="overviewTitle">Overview</string>
    <string name="overViewFilter">Life Time</string>
    <string name="ShopSaveActivityHeader">Enter business details</string>
    <string name="ShopSaveActivityNameHint">Business Name</string>
    <string name="ShopSaveActivityAddressHint">Address</string>
    <string name="ShopSaveActivityFinishButton">Finish</string>
    <string name="CategoryItemCount">Product listed</string>
    <string name="CategoryHeader">Categories</string>
    <string name="AddCAtegoryHeader">Add Category</string>
    <string name="AddCAtegoryHint">Category Name</string>
    <string name="AddCategoryButtonText">Create</string>
    <string name="HomeOverviewOrdersHeader">ORDERS</string>
    <string name="HomeOverviewRevenueHeader">REVENUE</string>
    <string name="HomeOverviewStoreViewsHeader">STORE VIEWS</string>
    <string name="HomeOverviewProductViewsHeader">PRODUCT VIEWS</string>
    <string name="homeActiveOrdersHeader">Active Orders</string>
    <string name="HomeActiveOrdersViewAll">View All</string>
    <string name="HomeActiveOrdersAllFilter">All</string>
    <string name="HomeActiveOrdersPendingFilter">Pending</string>
    <string name="HomeActiveOrdersAcceptedFilter">Accepted</string>
    <string name="ordersLayoutHeaderTitle">Orders</string>
    <string name="orderItemDetailsButton">Details ></string>
    <string name="AccountActivityHeader">Account</string>
    <string name="AccountEditDetailText">Edit business details</string>
    <string name="AccountActivityDeliveryCharge">Deliver Charges</string>
    <string name="AccountActivityShareWithCustomer">Share with Customers</string>
    <string name="AccountActivityPrivacyPolicy">Privacy Policy</string>
    <string name="AccountActivityRateUs">Rate us</string>
    <string name="AccountActivitySignOut">Sign Out</string>
    <string name="AccountActivityVideoTutorial">Video Tutorial</string>
    <string name="AccountActivityCustomerSupport">SHOPWALA CUSTOMER SUPPORT</string>
    <string name="AccountActivityCustomerSupportNumber">+91-9090909090</string>
    <string name="AddProductHeader">Add Product</string>
    <string name="AddProductUpload">Upload</string>
    <string name="AddProductAddImagefooter">Add product image</string>
    <string name="AddProductProductNameHint">Product Name</string>
    <string name="AddProductPriceHint">Price</string>
    <string name="AddProductPerUnit">per unit</string>
    <string name="AddProductPerKg">per kg</string>
    <string name="AddProductPerGm">per gm</string>
    <string name="AddProductPerLtr">per ltr</string>
    <string name="AddProductPerMl">per ml</string>
    <string name="AddProductDecriptionHint">Description</string>
    <string name="AddProductCategoryHint">Add category of product</string>
    <string name="AddProductSaveButton">Add Product</string>
    <string name="AddProductSpinnerAddCAtegory">Add new Category</string>
    <string name="AddProductVarietyHint">Varieties available</string>
    <string name="ProductItemListedOnline">Listed Online</string>
    <string name="ProductItemNotListed">Not Listed</string>
    <string name="ProductActivityHeader">Products</string>
    <string name="ProductActivitySearchHint">Search products</string>
    <string name="PrivacyPolicyHeader">Privacy Policy</string>
    <string name="DeliveryChargesHeader">Delivery Charges</string>
    <string name="DeliveryChargePerOrder">DELIVERY CHARGE PER ORDER</string>
    <string name="DeliveryChargeFreeAbove">FREE DELIVERY ABOVE</string>
    <string name="DeliveryChargePriceHint">Price</string>
    <string name="DeliveryChargeSaveChangesButton">Save Changes</string>
    <string name="EditBusinessDetailHeader">Edit business details</string>
    <string name="EditBusinessdetailImageFooter">Update store image</string>
    <string name="EditBusinessDetailSaveButton">Save</string>
    <string name="categoryAlertDialogEditCategoryName">Edit category name</string>
    <string name="categoryAlertDialogEditShareCategory">Share category </string>
    <string name="categoryAlertDialogEditDeleteCategory">Delete category </string>
    <string name="categoryAlertDialogEditProductDetail">Edit product details</string>
    <string name="categoryAlertDialogEditShareProduct">Share product </string>
    <string name="categoryAlertDialogEditDeleteProduct">Delete product </string>
    <string name="UpdateProductHeader">Update Product</string>
    <string name="UpdateProductUpload">Upload</string>
    <string name="UpdateProductAddImagefooter">Add product image</string>
    <string name="UpdateProductProductNameHint">Product Name</string>
    <string name="UpdateProductPriceHint">Price</string>
    <string name="UpdateProductDecriptionHint">Description</string>
    <string name="UpdateProductCategoryHint">Add category of product</string>
    <string name="UpdateProductSaveButton">Update</string>
    <string name="UpdateProductDeleteButton">Delete Product</string>
    <string name="UpdateCAtegoryHeader">Update Category</string>
    <string name="UpdateCAtegoryHint">Category Name</string>
    <string name="UpdateCategoryButtonText">Update</string>
    <string name="UpdateCategoryDeleteButtonText">Delete Category</string>
    <string name="OrderDetailHeader">Order Details</string>
    <string name="OrderDetailOrderId">Order Id</string>
    <string name="OrderDetailItemTotal">Item Total</string>
    <string name="OrderDetailDelivery">Delivery</string>
    <string name="OrderDetailGrandTotal">Grand Total</string>
    <string name="OrderDetailCustomerDetailsHeader">CUSTOMER\'S DETAILS</string>
    <string name="OrderDetailCustomerDetailsName">Name:</string>
    <string name="OrderDetailCustomerDetailsMobile">Mobile:</string>
    <string name="OrderDetailCustomerDetailsAddress">Address:</string>
    <string name="OrderDetailCustomerDetailsPinCode">Pin Code:</string>
    <string name="OrderDetailCustomerDetailsPayment">Payment:</string>
    <string name="OrderDetailCustomerDetailsCity">City:</string>
    <string name="OrderDetailCustomerDetailsUserDescription">Requests:</string>
    <string name="OrderDetailDeclineButton">Decline</string>
    <string name="OrderDetailAcceptButton">Accept</string>
    <string name="OrderDetailCancelButtton">Cancel Order</string>
    <string name="OrderDetailShipButton">Ship Order</string>
    <string name="OrderDetailDeliveredButton">Delivered</string>
    <string name="OrderDetailNotDeliveredButton">Not Delivered</string>
</resources>